[tool.poetry]
name = "topic_car_classification"
version = "0.1.0"
description = ""
authors = ["anatoly <t.vlasov23@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.7.0"
wemake-python-styleguide = "^0.19.2"
isort = "^5.13.2"
black = "^24.4.2"
pydantic = "^2.7.1"
omegaconf = "^2.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
